// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage matches snapshot when user has a displayName 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-6 md:px-10 lg:px-20 max-w-screen-xl my-12 ml-2 sm:ml-0"
  >
    <h1
      class="text-[36px] leading-[44px] tracking-[-0.02em] font-bold text-[#04051D] text-center mb-10"
    >
      Welcome Jane Smith!
    </h1>
    <div
      data-testid="issuers-page"
    >
      IssuersPage
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage matches snapshot when user is undefined 1`] = `
<DocumentFragment>
  <div
    class="px-4 sm:px-6 md:px-10 lg:px-20 max-w-screen-xl my-12 ml-2 sm:ml-0"
  >
    <h1
      class="text-[36px] leading-[44px] tracking-[-0.02em] font-bold text-[#04051D] text-center mb-10"
    >
      Welcome undefined!
    </h1>
    <div
      data-testid="issuers-page"
    >
      IssuersPage
    </div>
  </div>
</DocumentFragment>
`;
